--- a/android/src/main/res/navigation/navi_action_flow.xml
+++ b/android/src/main/res/navigation/navi_action_flow.xml
@@ -5,27 +5,27 @@
     android:id="@+id/nav_flow_graph"
     tools:ignore="InvalidNavigation">
 
-    <fragment
-        android:id="@+id/flow_splash_init_fragment"
-        android:name="rooit.me.xo.ui.flow.splash.SplashFlowFragment"
-        android:label="flow_splash"
-        tools:layout="@layout/fragment_flow_splash">
-        <action
-            android:id="@+id/action_flow_splash"
-            app:destination="@id/flow_splash_init_fragment"
-            app:popUpTo="@id/flow_splash_init_fragment"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/flow_main_fragment"
-        android:name="rooit.me.xo.ui.flow.main.MainFlowFragment"
-        android:label="flow_main"
-        tools:layout="@layout/fragment_flow_main">
+<!--    <fragment-->
+<!--        android:id="@+id/flow_splash_init_fragment"-->
+<!--        android:name="rooit.me.xo.ui.flow.splash.SplashFlowFragment"-->
+<!--        android:label="flow_splash"-->
+<!--        tools:layout="@layout/fragment_flow_splash">-->
+<!--        <action-->
+<!--            android:id="@+id/action_flow_splash"-->
+<!--            app:destination="@id/flow_splash_init_fragment"-->
+<!--            app:popUpTo="@id/flow_splash_init_fragment"-->
+<!--            app:popUpToInclusive="true" />-->
+<!--    </fragment>-->
+<!--    <fragment-->
+<!--        android:id="@+id/flow_main_fragment"-->
+<!--        android:name="rooit.me.xo.ui.flow.main.MainFlowFragment"-->
+<!--        android:label="flow_main"-->
+<!--        tools:layout="@layout/fragment_flow_main">-->
 
-        <action
-            android:id="@+id/action_flow_mian"
-            app:destination="@id/flow_main_fragment"
-            app:popUpTo="@id/flow_main_fragment"
-            app:popUpToInclusive="true"/>
-    </fragment>
+<!--        <action-->
+<!--            android:id="@+id/action_flow_mian"-->
+<!--            app:destination="@id/flow_main_fragment"-->
+<!--            app:popUpTo="@id/flow_main_fragment"-->
+<!--            app:popUpToInclusive="true"/>-->
+<!--    </fragment>-->
 </navigation>
