--- a/android/src/main/res/layout/page_login.xml
+++ b/android/src/main/res/layout/page_login.xml
@@ -7,35 +7,23 @@
     tools:context=".ui.news.PageNews">
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/bt_login"
-        app:layout_constraintEnd_toEndOf="@+id/bt_normal"
-        app:layout_constraintStart_toStartOf="@+id/bt_login" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go Login Demo"
+        android:text="Login Finish"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bt_normal"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/bt_normal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go Normal News"
-        app:layout_constraintBottom_toBottomOf="@+id/bt_login"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bt_login"
-        app:layout_constraintTop_toTopOf="@+id/bt_login" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
