--- a/android/src/main/res/navigation/navi_news.xml
+++ b/android/src/main/res/navigation/navi_news.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news_graph"
     app:startDestination="@+id/navigation_news">
-
     <fragment
         android:id="@+id/navigation_news"
         android:name="rooit.me.xo.ui.news.PageNews"
         android:label="@string/title_news"
-        tools:layout="@layout/fragment_news" />
-
+        tools:layout="@layout/fragment_news">
+        <action />
+    </fragment>
 </navigation>
