--- a/android/src/main/res/navigation/navi_splash.xml
+++ b/android/src/main/res/navigation/navi_splash.xml
@@ -8,6 +8,18 @@
         android:id="@+id/splash_step1"
         android:name="rooit.me.xo.ui.splash.PageSplash"
         android:label="PageSplash"
-        tools:layout="@layout/fragment_splash" />
-
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@id/action_Splash_to_Login"
+            app:destination="@id/login_graph"
+            app:popUpTo="@+id/splash_step1"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@id/action_Splash_to_Main"
+            app:destination="@id/news_graph"
+            app:popUpTo="@+id/splash_step1"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <include app:graph="@navigation/navi_login" />
+    <include app:graph="@navigation/navi_news" />
 </navigation>
