--- a/android/src/main/res/values/ids.xml
+++ b/android/src/main/res/values/ids.xml
@@ -4,4 +4,11 @@
     <item type="id" name="PageLogin"/>
     <item type="id" name="PageMain"/>
     <item type="id" name="PageNews"/>
+    <item type="id" name="main_nav_graph"/>
+    <item type="id" name="action_Splash_to_Login"/>
+    <item type="id" name="action_Splash_to_Main"/>
+    <item type="id" name="action_Login_to_News"/>
+    <item type="id" name="splash_step1"/>
+    <item type="id" name="login_step1"/>
+    <item type="id" name="navigation_news"/>
 </resources>
