add NavGraphContentLambdaBuilder & modify KDslNavigationBuilder -- prepare for migrate to compose & kmp navigation

--- a/android/src/main/res/navigation/navi_news.xml
+++ b/android/src/main/res/navigation/navi_news.xml
@@ -8,6 +8,8 @@
         android:name="rooit.me.xo.ui.news.PageNews"
         android:label="@string/title_news"
         tools:layout="@layout/fragment_news">
-        <action />
+        <action
+            android:id="@+id/action_news_to_future_destination_for_todo" />
+
     </fragment>
 </navigation>
