--- a/android/src/legacy_nav/res/navigation/navi_news.xml
+++ b/android/src/legacy_nav/res/navigation/navi_news.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news_graph"
-    app:startDestination="@+id/navigation_news">
+    app:startDestination="@id/navigation_news">
     <fragment
         android:id="@+id/navigation_news"
         android:name="rooit.me.xo.ui.news.PageNews"
